--- a/first.html
+++ b/first.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <h1>Hello, My name is Prof(Dr.) Arun Kumar Singh</h1>
+    <h1>Hello, My name is Prof Arun Kumar Singh</h1>
 </body>
 </html>
